fix(ui): correct toast horizontal alignment

--- a/app/client/src/style/components/_toast.scss
+++ b/app/client/src/style/components/_toast.scss
@@ -1,19 +1,21 @@
 .v-toast {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	gap: 5px;
 	opacity: 1;
-	min-width: 250px; /* Set a default minimum width */
-	margin-left: -125px; /* Divide value of min-width by 2 */
-	color: #fff; /* White text color */
-	text-align: center; /* Centered text */
-	border-radius: 2px; /* Rounded borders */
-	padding: 16px; /* Padding */
-	position: fixed; /* Sit on top of the screen */
+	min-width: 250px;
+	max-width: calc(100vw - 32px);
+	color: #fff;
+	text-align: center;
+	border-radius: 2px;
+	position: fixed;
 	pointer-events: none;
 	z-index: 9999;
-	left: 50%; /* Center the snackbar */
-	bottom: 30px; /* 30px from the bottom */
+	left: 50%;
+	bottom: 30px;
+	transform: translateX(-50%);
+	box-sizing: border-box;
 }
 .v-toast > * {
 	pointer-events: auto;
@@ -36,9 +38,11 @@
 	cursor: pointer;
 	display: flex;
 	align-items: center;
+	justify-content: center;
 	gap: 10px;
-	padding-left: 1em;
-	padding-right: 1em;
+	padding: 16px 1em;
+	max-width: calc(100vw - 32px);
+	box-sizing: border-box;
 	.v-toast__icon {
 		background: url('../../assets/icons/small_edit.webp') no-repeat;
 		width: 12px;
@@ -65,8 +69,6 @@
 	transition:
 		opacity 0.5s ease,
 		top 0.5s ease;
-	animation: shake 0.5s;
-	animation-delay: 0.35s;
 }
 .v-leave-active {
 	transition:
@@ -80,39 +82,4 @@
 .v-leave-to {
 	top: 30px;
 	opacity: 0;
-}
-@keyframes shake {
-	0% {
-		transform: translate(1px, 1px) rotate(0deg);
-	}
-	10% {
-		transform: translate(-1px, -2px) rotate(-1deg);
-	}
-	20% {
-		transform: translate(-3px, 0px) rotate(1deg);
-	}
-	30% {
-		transform: translate(3px, 2px) rotate(0deg);
-	}
-	40% {
-		transform: translate(1px, -1px) rotate(1deg);
-	}
-	50% {
-		transform: translate(-1px, 2px) rotate(-1deg);
-	}
-	60% {
-		transform: translate(-3px, 1px) rotate(0deg);
-	}
-	70% {
-		transform: translate(3px, 1px) rotate(-1deg);
-	}
-	80% {
-		transform: translate(-1px, -1px) rotate(1deg);
-	}
-	90% {
-		transform: translate(1px, 2px) rotate(0deg);
-	}
-	100% {
-		transform: translate(1px, -2px) rotate(-1deg);
-	}
 }
